--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^4.2.0",
     "react-query": "^3.13.10",
     "react-scripts": "4.0.3",
+    "react-spinners-kit": "^1.9.1",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
